--- a/main.html
+++ b/main.html
@@ -8,7 +8,8 @@
     <title>MyNotes</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer"
     />
-    <script src="responsiveness.js"></script>
+    <link rel='stylesheet' media='screen and (min-width: 300px) and (max-width: 690px)' href='mobile.css' />
+    <link rel='stylesheet' media='screen and (min-width: 691px) and (max-width: 2000px)' href='desktop.css' />
 </head>
 
 <body>
